perf works