@@ -4,21 +4,61 @@
 
 ## Prerequisites
 
-- JDK 11+
+- JDK 17+ (the project compiles with Scala 3.8.2 against a JDK 17 baseline; Gatling's `--add-opens` settings in `build.sbt` assume JDK 17+ and the dev rig is verified on JDK 23)
 - sbt 1.12.6
+- Docker Desktop (for the integrated stack + the k6 perf surfaces)
 
 ## Common Commands
 
+`make` (no args) prints the full menu. The high-traffic groups are:
+
+**Pick a backend stack** (mutually exclusive — running one tears the others down)
+
 | Command | Purpose |
 |---|---|
-| `make` | List every available developer target with its description |
-| `make build` | Build all service Docker images (alias for `sbt dockerBuildAll`) |
-| `make up` / `make down` | Start / stop the integrated stack |
-| `make dev-gateway` | Rebuild + restart only the gateway container (also: `dev-game-service`, `dev-repository`, `dev-lobby-service`, `dev-opening-service`, `dev-analytics-service`) |
+| `make stack-postgres` / `stack-mongo` / `stack-redis` / `stack-cassandra` | Bring up the stack with `PICHESS_BACKEND=<name>` |
+| `make stack-inmemory` | Stack with no DB — game state lives in-process |
+| `make stack-status` | Show the active stack profile + running containers |
+| `make stack-restart` | Re-up the last-selected stack (reads `.pichess-stack`) |
+| `make stack-down` | Stop the active stack and clear the state file |
+
+**Layer in profile addons** (additive — bring up alongside any running stack)
+
+| Command | Brings up | URL targets |
+|---|---|---|
+| `make obs` / `obs-down` / `obs-status` | Prometheus + Grafana + Jaeger | `make grafana` / `prometheus` / `jaeger` open the UIs |
+| `make opening` / `opening-down` | Kafka + opening-service + Neo4j | — |
+| `make analytics` / `analytics-down` | Kafka + analytics-service + ClickHouse | — |
+
+> Note: `make opening` / `make analytics` bring up the consumers, but game-service only publishes if `KAFKA_BOOTSTRAP_SERVERS` was set at start time. For full publisher → consumer integration, use `make stack-<bk> EXTRA=opening` (or `analytics`).
+
+**Per-service iteration**
+
+| Command | Purpose |
+|---|---|
+| `make build` | Rebuild all service Docker images (alias for `sbt dockerBuildAll`) |
+| `make build-<svc>` | Rebuild one image — `gateway`, `game-service`, `repository`, `lobby-service`, `opening-service`, `analytics-service`, `tui` |
+| `make dev-<svc>` | Rebuild + restart only that container (`--no-deps`) so the DBs and other services keep running |
+| `make shell-<svc>` | Open a shell inside a running service container |
 | `make logs` | Tail logs for every service in the stack |
-| `make psql` / `mongo` / `redis-cli` / `cqlsh` / `cypher` / `clickhouse-cli` | Drop into the matching DB console |
-| `make shell-gateway` etc. | Open a shell inside a running service container |
-| `make tui` | Run an interactive TUI session against the gateway (requires `tui-service`) |
+| `make ps` | List running containers |
+| `make tui` | Run an interactive TUI session against the gateway |
+
+**DB shells**
+
+| Command | Drops you into |
+|---|---|
+| `make psql` | postgres |
+| `make mongo` | mongosh |
+| `make redis-cli` | redis-cli |
+| `make cqlsh` | cassandra |
+| `make cypher` | neo4j (opening projection) |
+| `make clickhouse-cli` | clickhouse (analytics projection) |
+
+**sbt-level commands** (run from the host, no Docker)
+
+| Command | Purpose |
+|---|---|
 | `sbt test` | Run all tests across all modules |
 | `sbt scalafmtAll` | Format all source files (required before committing) |
 | `sbt coverage test coverageReport` | Run tests with coverage report |
@@ -27,23 +67,53 @@
 | `sbt repository/run` | Run repository (REST :8091, optionally Kafka consumer) on the host |
 | `sbt <svc>/Docker/publishLocal` | Build a single service's Docker image |
 
-> **`sbt run` at the root is no longer wired** — the previous `app` monolith was split into three services. Use the per-service commands above. See [ADR 013](adr/013-deletion-of-app-module-and-sbt-run.md).
+**Perf suite** — see [performance.md](performance.md) for the full reference.
+
+| Command | Purpose |
+|---|---|
+| `make perf-all` | JMH bench + Gatling cross-backend + all three k6 surfaces, output rooted at one `perf-reports/<TS>/` |
+| `make perf` | Cross-backend Gatling harness — `BACKENDS=…`, `MODE=…`, `OBS=…` |
+| `make bench` | JMH microbench suite |
+| `make k6-browser` / `k6-grpc` / `k6-kafka` | Individual k6 surfaces |
+| `make k6` `SURFACES=…` | All k6 surfaces (default: browser only) |
+| `make k6-build` | Build the custom k6 image (xk6-kafka + Chromium) |
+| `make profile-async-cpu SERVICE=<svc>` | Attach async-profiler to a live container |
+
+> **`sbt run` at the root is no longer wired** — the previous `app` monolith was split into multiple services (game-service, gateway, repository, lobby-service, opening-service, analytics-service). Use the per-service commands above. See [ADR 013](adr/013-deletion-of-app-module-and-sbt-run.md).
 
 ### Inner-loop env vars (host JVM)
 
-| Service       | Env var                  | Default            |
-|---------------|--------------------------|--------------------|
-| game-service  | `GRPC_PORT`              | `9000`             |
-| game-service  | `KAFKA_BOOTSTRAP_SERVERS`| (unset → in-memory recorder, no Kafka required) |
-| repository    | `REPOSITORY_PORT`        | `8091`             |
-| repository    | `KAFKA_BOOTSTRAP_SERVERS`| (unset → HTTP-only, no consumer) |
-| repository    | `KAFKA_CONSUMER_GROUP`   | `pichess-repository` |
-| gateway       | `HTTP_PORT`              | `8090`             |
-| gateway       | `GAME_SERVICE_GRPC`      | `localhost:9000`   |
+| Service           | Env var                   | Default            |
+|-------------------|---------------------------|--------------------|
+| game-service      | `GRPC_PORT`               | `9000`             |
+| game-service      | `KAFKA_BOOTSTRAP_SERVERS` | (unset → in-memory recorder, no Kafka required) |
+| game-service      | `PICHESS_BACKEND`         | `inmemory` (also `postgres` / `mongo` / `redis` / `cassandra`) |
+| game-service      | `PICHESS_CACHE`           | `none` (set `redis` to wrap the primary in `CachedGameRepository`) |
+| game-service      | `METRICS_PORT`            | `9102` |
+| repository        | `REPOSITORY_PORT`         | `8091`             |
+| repository        | `KAFKA_BOOTSTRAP_SERVERS` | (unset → HTTP-only, no consumer) |
+| repository        | `KAFKA_CONSUMER_GROUP`    | `pichess-repository` |
+| repository        | `PICHESS_BACKEND` / `PICHESS_CACHE` | same as game-service (shares `PersistenceLayers`) |
+| repository        | `METRICS_PORT`            | `9103` |
+| gateway           | `HTTP_PORT`               | `8090`             |
+| gateway           | `GAME_SERVICE_GRPC`       | `localhost:9000`   |
+| gateway           | `METRICS_PORT`            | `9101` |
+| lobby-service     | `LOBBY_PORT`              | `8092` |
+| lobby-service     | `METRICS_PORT`            | `9104` |
+| opening-service   | `KAFKA_BOOTSTRAP_SERVERS` | (required when running) |
+| opening-service   | `KAFKA_CONSUMER_GROUP`    | `pichess-opening` |
+| opening-service   | `METRICS_PORT`            | `9105` |
+| analytics-service | `ANALYTICS_PORT`          | `8093` |
+| analytics-service | `KAFKA_BOOTSTRAP_SERVERS` | (required when running) |
+| analytics-service | `KAFKA_CONSUMER_GROUP`    | `pichess-analytics` |
+| analytics-service | `METRICS_PORT`            | `9106` |
+| **all services**  | `PICHESS_PROFILE`         | unset (`sampling` enables zio-profiling — requires a profile-tagged build, see [performance.md](performance.md) "Layer 3") |
+| **all services**  | `TRACING_ENABLED`         | unset (truthy → live OTLP exporter to Jaeger at `OTEL_EXPORTER_OTLP_ENDPOINT`) |
+| **all services**  | `OTEL_EXPORTER_OTLP_ENDPOINT` | `http://jaeger:4317` (only read when `TRACING_ENABLED` is truthy) |
 
 ### Multi-Project Tips
 
-The project has 14 SBT sub-projects. To run commands against a single module, prefix with the module name: `sbt codec/test`, `sbt gateway/compile`, etc. `sbt test` runs tests across all modules.
+The project has 25 SBT sub-projects (run `sbt projects` for the full list). To run commands against a single module, prefix with the module name: `sbt codec/test`, `sbt gateway/compile`, etc. `sbt test` runs tests across all modules.
 
 Coverage is enforced at 100% on all JVM modules. The build fails if any line is uncovered. Scala.js modules (`web-ui`, `domain.js`, `api.js`) have coverage disabled since scoverage doesn't instrument JS output. The `proto` module has coverage disabled (generated code) and `KafkaGameEventProducer`/`KafkaGameEventConsumer`/`GameServiceMain`/`GatewayMain` are excluded via `coverageExcludedFiles` (they need a live broker / port to exercise; covered by docker-compose smoke tests instead). Use `scripts/check-coverage.py` after a `coverageReport` run to inspect uncovered lines per file.
 
@@ -95,34 +165,85 @@ When fixing a bug, write a regression spec **before** touching production code:
 
 ## Adding a New Repository Implementation
 
-1. Create a class in the `repository` module (`repository/src/main/scala/chess/repository/`) that extends `GameRepository`:
+The persistence layer is split into one module per backend:
+`persistence/{api,contract,cache,postgres,mongo,redis,cassandra,runtime}`.
+The `api` module defines the trait + the `Backend` enum + `BackendConfig`
+(reads `PICHESS_BACKEND` and `PICHESS_CACHE`). The `runtime` module's
+`PersistenceLayers` is the single switch every service Main uses; one
+new backend = one new module + one new case in two switches.
+
+1. **Create a module** for the new backend at `persistence/<name>/`. Mirror
+   the shape of an existing one (e.g. `persistence/postgres/`): a `*Database` /
+   `*ClientLayer` for the connection, a `*GameRepository` and `*LobbyRepository`
+   each extending the traits from `persistence.api`. Wire it as an sbt
+   subproject in `build.sbt` and add it to the `persistenceRuntime` dependency list.
+2. **Implement the repository traits** (`GameRepository`, `LobbyRepository`):
    ```scala
-   final class PostgresGameRepository(...) extends GameRepository:
+   final class ClickhouseGameRepository(client: Client) extends GameRepository:
      def save(id: GameId, state: GameState): IO[GameError, Unit] = ???
      def load(id: GameId): IO[GameError, Option[GameState]] = ???
      def delete(id: GameId): IO[GameError, Unit] = ???
    ```
-2. Expose it as a `ZLayer`:
+3. **Expose each repository as a `ZLayer`**:
    ```scala
-   object PostgresGameRepository:
-     val layer: URLayer[DataSource, GameRepository] = ZLayer.fromFunction(...)
+   object ClickhouseGameRepository:
+     val layer: URLayer[Client, GameRepository] = ZLayer.fromFunction(...)
    ```
-3. In `app/src/main/scala/chess/Main.scala`, replace the repository layer selection — no other file changes needed. The existing `Main` already selects between `InMemoryGameRepository` and `HttpGameRepository` based on the `REPOSITORY_URL` env var; add a third branch or replace one.
+4. **Add a `Backend.Clickhouse` case** in `persistence/api/.../Backend.scala`,
+   parsed from the env value `clickhouse` in `BackendConfig`.
+5. **Wire it into `PersistenceLayers`** in `persistence/runtime/.../PersistenceLayers.scala` —
+   add a `case Backend.Clickhouse => …` arm to both `primaryGameRepository`
+   and `primaryLobbyRepository`. No service-Main change is needed; all three
+   service mains (`gameService`, `repository`, `lobbyService`) consume
+   `PersistenceLayers.gameRepository(cfg)` / `lobbyRepository(cfg)` already.
+6. **Add a compose profile** for the new datastore in `docker-compose.yml`
+   (mirror the postgres / mongo / redis / cassandra blocks: profile name
+   matches `PICHESS_BACKEND`, healthcheck waits on a real readiness probe).
+7. **Add a `make stack-<name>`** target in `Makefile` next to the existing
+   `stack-postgres` etc. Three-line copy-paste of the `_stack_up` macro.
+
+The cache decorator (`PICHESS_CACHE=redis`) is orthogonal — `PersistenceLayers`
+wraps any primary backend in `CachedGameRepository` when the cache env var is
+set, so a new backend gets caching support for free.
 
 ---
 
 ## Docker
 
-Two modules are Docker-packaged via sbt-native-packager: `app` (port 8090) and `repository` (port 8091).
+Seven services are Docker-packaged via sbt-native-packager. The full set:
+
+| Service             | Container port | Module           | Role |
+|---------------------|----------------|------------------|------|
+| `gateway`           | 8090 (HTTP)    | `gateway`        | Public REST + SPA + SSE. Calls game-service over gRPC and lobby-service over HTTP. |
+| `game-service`      | 9000 (gRPC)    | `game-service`   | Command handler + the canonical per-game state. Publishes `GameDomainEvent` to Kafka when configured. |
+| `repository`        | 8091 (REST)    | `repository`     | Persistence write-side. Consumes `chess.game-events` and saves via `PersistenceLayers`. |
+| `lobby-service`     | 8092 (REST)    | `lobby-service`  | Lobby management + invite-code flow. |
+| `opening-service`   | (no HTTP)      | `opening-service`| Kafka consumer → Neo4j opening-tree projection. |
+| `analytics-service` | 8093 (REST)    | `analytics-service` | Kafka consumer → ClickHouse analytics projection. |
+| `tui-service`       | (no HTTP)      | `tui`            | Headless control surface; spawn via `make tui`. |
+
+Each service also exposes Prometheus metrics on a dedicated port (9101–9106) regardless of profile — see the "Inner-loop env vars" table above for `METRICS_PORT` defaults.
+
+**Image rebuilds**:
 
 ```bash
-sbt Docker/publishLocal          # build both images
-docker compose up                # run both microservices
+make build                       # all images at once (sbt dockerBuildAll)
+make build-<svc>                 # one image
+sbt <svc>/Docker/publishLocal    # equivalent to make build-<svc>
 ```
 
-When `REPOSITORY_URL` is set (e.g. `http://repository:8091` in docker-compose), the `app` container uses `HttpGameRepository` to call the `repository` container over REST. Without it, `app` falls back to `InMemoryGameRepository`.
+**Stack bring-up** — see "Common Commands" above for the full menu. The short answer:
 
-The `docker-compose.yml` at the project root wires both services together.
+```bash
+make stack-postgres              # one backend, no extras
+make stack-postgres EXTRA=obs    # add Prometheus / Grafana / Jaeger
+make stack-postgres EXTRA=opening,analytics,obs
+                                 # everything — Kafka, both projections, obs
+```
+
+The persistence selection happens via `PICHESS_BACKEND` (read by every service Main through `BackendConfig`); the compose `--profile <bk>` flag controls which DB container starts. Backend service code is shared across all services via the `persistence` modules — see "Adding a New Repository Implementation" above.
+
+`docker-compose.yml` at the project root wires everything together. Profiles are used for backend selection (`postgres` / `mongo` / `redis` / `cassandra`) and for additive features (`obs` / `opening` / `analytics` / `tui` / `k6`).
 
 ---
 
